syntax = "proto3";

package portfolio.v1;

service GuestService {
  rpc GetGuestProfile(GetGuestProfileRequest) returns (GetGuestProfileResponse);
  rpc GetGuestProfileById(GetGuestProfileByIdRequest) returns (GetGuestProfileByIdResponse);
  rpc SaveGuestProfile(SaveGuestProfileRequest) returns (SaveGuestProfileResponse);
}

message GuestProfile {
  string user_id = 1;
  string name = 2;
  string avatar_url = 3;  // Read-only, download URL
  string avatar_media_id = 4; // Reference to media__files.id
  string tagline = 5;     // Short introduction (max 100 chars)
  string bio = 6;         // Self introduction (max 1000 chars)
}

message GetGuestProfileRequest {}  // user_id is obtained from authentication

message GetGuestProfileResponse {
  GuestProfile profile = 1;
}

message SaveGuestProfileRequest {
  string name = 1;
  string avatar_media_id = 2; // Reference to media__files.id
  string tagline = 3;     // Short introduction (max 100 chars)
  string bio = 4;         // Self introduction (max 1000 chars)
}

message SaveGuestProfileResponse {
  GuestProfile profile = 1;
}

message GetGuestProfileByIdRequest {
  string user_id = 1;  // Guest user ID (UUID)
}

message GuestDetailProfile {
  reserved 1; // was id (use user_id instead)
  string user_id = 2;
  string name = 3;
  string avatar_url = 4;        // Read-only, download URL
  string avatar_media_id = 5;   // Reference to media__files.id
  string tagline = 6;           // Short introduction (max 100 chars)
  string bio = 7;               // Self introduction (max 1000 chars)
  bool is_following = 8;        // Whether the guest is following the cast
  string followed_at = 9;       // ISO8601 timestamp when the guest followed
  bool is_blocked = 10;         // Whether the cast has blocked this guest
}

message GetGuestProfileByIdResponse {
  GuestDetailProfile profile = 1;
}
